tests/diagnostics/functions/duplicate_function/expect.txt
# exit: 1
input/main.lang0:5:1: error: duplicate function 'foo'
  function foo() -> int64 {
  ^
